<resources>
    <string name="app_name">DINR</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_Confirmation">Password Confirmation</string>
    <string name="sign_In_Failed">Sign In Failed</string>
    <string name="your_email_or_your_password_is_incorrect.">Your email or your password is incorrect.</string>
    <string name="our_password_is_at_least_8_characters.">Our password is at least 8 characters.</string>
    <string name="sign_up">Sign up</string>
    <string name="first_Name">First Name</string>
    <string name="last_Name">Last Name</string>
    <string name="phone_Number">Phone Number</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="sign_in_with_Facebook">Sign in with Facebook</string>
    <string name="create_an_account">Create an account</string>
    <string name="you_cannot_be_signed_in_at_this_time.">You cannot be signed in at this time.</string>
    <string name="error">Error</string>
    <string name="account_creation_failed">Account creation failed</string>
    <string name="please_confirm_the_following">Please confirm the following reservation:</string>
    <string name="are_you_sure_you_want_to_cancel_this_reservation_You_wont_be_able_to_make_another_reservation_on_DINR_today.">Are you sure you want to cancel this reservation? You won\'t be able to make another reservation on DINR today.</string>
    <string name="if_you_dont_show_up_your_credit_card_may_be_charged">(If you don\'t show up, your credit card may be charged)</string>
    <string name="thank_you">Thank you</string>
    <string name="yes_I_am_sure">Yes, I am sure</string>
    <string name="yes_cancel_it">Yes, cancel it</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="booking_Error">Booking Error</string>
    <string name="oops">Oops</string>
    <string name="faq">FAQ</string>
    <string name="favourites">Favourites</string>
    <string name="no_favourites_just_yet">No favourites just yet</string>
    <string name="what_are_you_waiting_for">What are you waiting for?</string>
    <string name="remove_from_favorites">Remove\nfrom\nfavorites</string>
    <string name="whats_up">What\'s up!</string>
    <string name="hello">"Hello, "</string>
    <string name="my_account">My account</string>
    <string name="tonights_reservation">Tonight\'s Reservation</string>
    <string name="past_reservations">Past Reservations</string>
    <string name="Payment">Payment</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_faq">About &amp; FAQ</string>
    <string name="any_questions_Please_visit_our_section">Any questions? Please visit our %1$s section</string>
    <string name="rate_This_App">Rate This App</string>
    <string name="credit_card_information_is_required_in_order_to_book.">Credit card information is required in order to book.</string>
    <string name="we_have_successfully_stored_your_credit_card_number_you_may_now_proceed_to_booking_the_slot.">We have successfully stored your credit card number, you may now proceed to booking the slot.</string>
    <string name="log_in">Log in</string>
    <string name="would_you_like_to_log_in_to_add_this_restaurant_to_your_favorites">Would you like to log in to add this restaurant to your favorites?</string>
    <string name="no">No</string>
    <string name="oK">OK</string>
    <string name="no_reservations_yet">No reservations yet</string>
    <string name="start_Booking">Start Booking</string>
    <string name="book_now">Book now</string>
    <string name="credit_card_number">CREDIT CARD NUMBER</string>
    <string name="mmyy">MM / YY</string>
    <string name="cvv">CVV</string>
    <string name="scan_your_card">Scan your card</string>
    <string name="this_payment_method_may_be_used_if_you_dont_respect_your_reservation.">This payment method may be used if you don\'t respect your reservation.</string>
    <string name="payment_info">Payment info</string>
    <string name="submit">Submit</string>
    <string name="by_creating_a_DINR_account_you_agree_to_the">By creating a DINR account, you agree to the</string>
    <string name="and">and</string>
    <string name="or">or</string>
    <string name="now">NOW</string>
    <string name="unable_to_Save">Unable to Save</string>
    <string name="cannot_scan_your_credit_card_with_this_device._Please_enter_manually.">Cannot scan your credit card with this device. Please enter manually.</string>
    <string name="we_have_successfully_stored_your_credit_card_number.">We have successfully stored your credit card number.</string>
    <string name="validation_Error">Validation Error</string>
    <string name="looks_like_your_payment_information_is_invalid.">Looks like your payment information is invalid.</string>
    <string name="back_to_profile">Back to profile</string>
    <string name="share">Share</string>
    <string name="cancel_reservation">Cancel reservation</string>
    <string name="i_just_made_a_last_minute_reservation_for_tonight_at_at_with_DINR">I just made a last-minute reservation for tonight at %1$s at %2$s with DINR - getdinr.com</string>
    <string name="call_number">Call number</string>
    <string name="availabilities">Availabilities</string>
    <string name="availability">Availability</string>
    <string name="around_me">Around me</string>
    <string name="oops_something_went_wrong">Oops, something went wrong!</string>
    <string name="please_tap_to_refresh">Please tap to refresh</string>
    <string name="location_Services_Error">Location Services Error</string>
    <string name="user_has_not_responded_to_the_permissions_alert.">User has not responded to the permissions alert.</string>
    <string name="user_has_denied_this_app_permissions_to_access_device_location.">User has denied this app permissions to access device location.</string>
    <string name="user_is_restricted_from_using_location_services_by_a_usage_policy.">User is restricted from using location services by a usage policy.</string>
    <string name="location_services_are_turned_off_for_all_apps_on_this_device.">Location services are turned off for all apps on this device.</string>
    <string name="an_unknown_error_occurred.">An unknown error occurred.</string>
    <string name="your_reservation_has_been_canceled">Your reservation has been canceled!</string>
    <string name="restaurants">Restaurants</string>
    <string name="me">Me</string>
    <string name="map">Map</string>
    <string name="favorites">Favorites</string>
    <string name="check_back_later">Notify Me</string>
    <string name="closed">Closed</string>
    <string name="invalid_email">Invalid email</string>
    <string name="your_reservation_cannot_be_guaranteed">"Your reservation cannot be guaranteed if the size of your party is different than your original reservation. You can cancel your reservation up to two hours in advance through the app. If you don't show up, your credit card may be charged $30 per person." </string>
    <string name="get_notified">Get notified when your favourite restaurants have availabilities. Your Notify Me selections are refreshed daily.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email_address_below_and_we_will_send_you_a_ling_to_reset_your_password">"Enter your email address below and we will send you a link to reset your password."</string>
    <string name="reset">Reset</string>
    <string name="password_reset_success">"Check your inbox for an email from DINR entitled 'Reset password instructions'"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Notifications</string>
</resources>