<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/first_name"
                android:layout_width="fill_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/action_button2"
                android:hint="@string/first_Name"
                android:inputType="textPersonName"
                android:paddingLeft="15dp"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="fill_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/action_button2"
                android:hint="@string/last_Name"
                android:inputType="textPersonName"
                android:paddingLeft="15dp"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingRight="15dp"
                android:background="@drawable/action_button2"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="fill_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/action_button2"
                android:hint="@string/phone_Number"
                android:inputType="phone"
                android:paddingLeft="15dp"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/action_button2"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:textColor="@color/white"
                android:textSize="12sp" />


            <EditText
                android:id="@+id/password_confirmation"
                android:layout_width="fill_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/action_button2"
                android:hint="@string/password_Confirmation"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="fill_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:onClick="singnUpOnClick"
                android:text="@string/sign_up"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>