<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:dinr="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp">

    <LinearLayout
        android:id="@+id/choose_facebook_email_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="visible">

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/blue_facebook"
            android:text="@string/sign_in_with_Facebook"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_sign_in_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/action_button"
            android:text="@string/sign_in_with_email"
            android:textColor="@color/gray_text"
            android:textSize="12sp" />

        <com.godynamo.dinr.ui.CustomTextView
            android:id="@+id/or"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/or"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            dinr:fontName="MarkSmallCaps-Regular.otf" />


        <Button
            android:id="@+id/btn_sign_up_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/action_button2"
            android:text="@string/create_an_account"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_login_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="invisible">

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/action_button2"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/action_button2"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/action_button"
            android:text="@string/sign_in_with_email"
            android:textColor="@color/gray_text"
            android:textSize="12sp" />

        <com.godynamo.dinr.ui.CustomTextView
            android:id="@+id/reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/forgot_password"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            dinr:fontName="MarkSmallCaps-Regular.otf" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/logged_profile_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="15dp">

                <ImageView
                    android:id="@+id/logo_top"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/dinr_logo" />

                <TextView
                    android:id="@+id/name_greeting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/logo_top"
                    android:layout_marginLeft="8dp"
                    android:text="HELLO, DANKO"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/user_image"
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:padding="10dp"
                    android:src="@drawable/dinr_logo" />

            </RelativeLayout>

            <Button
                android:id="@+id/tonight_reservation_button"
                android:layout_width="fill_parent"
                android:layout_height="68dp"
                android:background="@drawable/action_button_about"
                android:drawableEnd="@drawable/arrow"
                android:drawableRight="@drawable/arrow"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/tonights_reservation"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/payment_button"
                android:layout_width="fill_parent"
                android:layout_height="68dp"
                android:background="@drawable/action_button_about"
                android:drawableEnd="@drawable/arrow"
                android:drawableRight="@drawable/arrow"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/payment_info"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/term_of_service_button"
                android:layout_width="fill_parent"
                android:layout_height="68dp"
                android:background="@drawable/action_button_about"
                android:drawableEnd="@drawable/arrow"
                android:drawableRight="@drawable/arrow"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/terms_of_service"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/privacy_policy_button"
                android:layout_width="fill_parent"
                android:layout_height="68dp"
                android:background="@drawable/action_button_about"
                android:drawableEnd="@drawable/arrow"
                android:drawableRight="@drawable/arrow"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/privacy_policy"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/about_faq_button"
                android:layout_width="fill_parent"
                android:layout_height="68dp"
                android:background="@drawable/action_button_about"
                android:drawableEnd="@drawable/arrow"
                android:drawableRight="@drawable/arrow"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/about_faq"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/rate_app_button"
                android:layout_width="fill_parent"
                android:layout_height="68dp"
                android:background="@drawable/action_button_about"
                android:drawableEnd="@drawable/arrow"
                android:drawableRight="@drawable/arrow"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/rate_This_App"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>