<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:dinr="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="70dp"
            android:paddingRight="70dp">

            <com.godynamo.dinr.ui.CustomTextView
                android:id="@+id/text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_email_address_below_and_we_will_send_you_a_ling_to_reset_your_password"
                android:layout_below="@+id/title"
                android:textColor="@color/white"
                android:layout_marginTop="15dp"
                android:gravity="left"
                dinr:fontName="MarkSmallCaps-Regular.otf"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="42dp"
                android:paddingRight="15dp"
                android:background="@drawable/action_button2"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/reset_button"
                android:layout_width="200dp"
                android:layout_height="42dp"
                android:layout_centerInParent="true"
                android:background="@drawable/action_button_book"
                android:text="@string/reset"
                android:layout_below="@+id/text"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="5dp"
                android:onClick="resetPassword"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>